--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,77 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header h2 {
+  background: rgb(44, 44, 197);
+  color: #fff;
+  font-weight: 700;
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+ul {
+  display: flex;
+  flex-direction: column;
+}
+
+.listItems {
+  display: flex;
+  justify-content: space-between;
+  text-decoration: none;
+  width: 100%;
+  background: #eee;
+  padding: 1rem 0;
+  margin: .1rem 0;
+}
+
+.listItems input {
+  height: 2rem;
+  width: 2rem;
+  margin-right: .4rem !important;
+}
+
+.additem, .search {
+  display: flex;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
+.delete-btn {
+  color: rgb(142, 142, 214);
+  font-size: 2rem;
+}
+
+.additem input, .search input {
+  padding: .7rem .3rem;
+  border: none;
+  background: #fff;
+  border: 1px solid #000;
+  border-radius: .3rem;
+  outline: none;
+  margin-right: .3rem;
+  margin-left: .3rem;
+  width: calc(100% - 50px);
+  max-width: calc(100% - 50px);
+}
+
+.search input {
+  width: 100% !important;
+  max-width: 100% !important;
+}
+
+.additem button {
+  font-size: 1rem;
+  width: 3rem;
+  border-radius: .3rem;
+  color: rgb(44, 44, 197);
+  background: aliceblue;
+  cursor: pointer;
+}
+
+.additem button:hover, .additem button:focus {
+  color: #fff;
+  background: limegreen;
 }
